# jmri-roster

./: .gitignore  Dockerfile  Dockerfile-importer  README-api.md  README-importer.md  README.md  docker-compose-importer.yml  docker-compose.yml  pyproject.toml  requirements.txt
.github/workflows/: dockerimage-api.yml  dockerimage-importer.yml  dockerimage.yml
docker/: Dockerfile-api  Dockerfile-importer  docker-compose-example.yml
html/: .htaccess  show_locomotive_details.php  show_roster.php  style.css  ui_base.php
html/api/: .htaccess  api_base.php  api_locomotive.php  api_roster.php
html/api/v1/: .htaccess  api_base.php  api_locomotive.php  api_locomotive_image.php  api_roster.php  fetch_locomotive.php  fetch_roster.php
html/common/: base.php  image.php  loader.php  locomotive.php  roster.php  roster_entry.php  utils.php
lib/: locomotive.php
nginx/: site.conf
python/: Dockerfile  main.py  pyproject.toml  requirements.txt  roster.db  run-lint.sh
python/importer/: roster_importer.py  roster_listener.py
python/model/: roster_database.py  roster_entry.py
scripts/: generate-requirements.sh  run-api-poetry.sh  run-importer-poetry.sh
src/: roster.db  roster_api.py  roster_database.py  roster_entry.py  roster_importer.py  roster_watcher.py  run_importer.py  utils.py
src/importer/: README.md  roster_importer.py  roster_watcher.py
src/model/: __init__.py  roster_database.py  roster_entry.py
src/static/: style.css
src/templates/: roster.html  roster_entry.html
www/api/v1/: .htaccess  locomotive.php  roster.php
